@@ -1,0 +1,9 @@
+# $Id$
+# returns a list of story titles and ids.
+import hoptime.hopapi as HAPI
+
+
+
+raise ReturnValue, HAPI.getLatestStoryLinks(limit)
+    
+        
