@@ -1,0 +1,19 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<html>
+  <head>
+    <title>Hoptime FAQ</title>
+  </head>
+
+  <body>
+    <h1>Hoptime FAQ</h1>
+ 
+    <p>Questions go here.</p>
+
+    <hr>
+    <address><a href="mailto:smulloni@smullbola.smullyan.org"></a></address>
+<!-- Created: Wed Oct 30 23:59:46 EST 2002 -->
+<!-- hhmts start -->
+Last modified: Thu Oct 31 00:00:06 EST 2002
+<!-- hhmts end -->
+  </body>
+</html>
