@@ -1,0 +1,3 @@
+<:import auth:>
+<:call `auth.getAuthorizer().logout(CONNECTION)`:>
+<:redirect /index.html:>
