@@ -1,0 +1,10 @@
+<:compargs story:>
+<:set game `story.getGame()`:>
+<h2><:val `game['title']`:></h2>
+<:if `game['description']`:>
+<h3><:val `game['description']`:></h3>
+<:/if:>
+game owner: <:val `game.getOwner().fullName()`:><br />
+game created: <:date date=`game['created']`:> <br />
+story published: <:date date=`story['published']`:> <br />
+<p><:val `story['story']`:></p>
