@@ -1,3 +1,8 @@
+2002-11-01    <smulloni@smullbola.smullyan.org>
+
+	* docs/tutorial/src/: (various files) some progress on 'hoptime'
+	demo application.
+
 2002-10-31  Jacob Smullyan  <smulloni@smullyan.org>
 
 	* pylibs/vfs/ftpfs.py (FTPFile.robuster): now catch more errors.
